# spec_simple

./: CMakeLists.txt  build_spec.sh  findunused.py  replaceilb.py  replacerlb.py  test.sh
scripts/: count_lines.sh  replacefatal.py  replacesalloc.py  replacewcall.sh
scripts/code_formatting/: emacs-format-f90  format_spec_source_code  fprettify_config.rc
src/: CMakeLists.txt  basefn.f90  bfield.f90  bnorml.f90  brcast.f90  casing.f90  coords.f90  curent.f90  df00ab.f90  dforce.f90  dfp100.f90  dfp200.f90  findunused.py  global.f90  inputlist.f90  inputlist.mod  intghs.f90  intghs_module.mod  iqpack.f  jo00aa.f90  lbpol.f90  lforce.f90  ma00aa.f90  ma02aa.f90  macros  manual.f90  matrix.f90  memory.f90  metrix.f90  mp00ac.f90  msphdf5.f90  mxspech.f90  numrec.f90  os  packab.f90  packxi.f90  pc00aa.f90  pc00ab.f90  preset.f90  ra00aa.f90  (+10 more)
test/: test.sh  test.sp  test.sp.end
